--- a/cores-background/atividade_cb.html
+++ b/cores-background/atividade_cb.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>class</title>
+    <title>Cores e background</title>
     <link rel="stylesheet" href="cb_style.css">
 </head>
 <body>
