Troca de título

--- a/medidas/atv_medidas.html
+++ b/medidas/atv_medidas.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>RGBA</title>
+    <title>Medidas</title>
     <link rel="stylesheet" href="medidas_style.css">
 </head>
 <body>
